packages/idris_db/test/errors/id/wrong_type.dart
// only int and string properties can be used as id

import 'package:idris_db/idris_db.dart';

@collection
class Test {
  late bool id;
}
